# streaming-demo

./: README.md  pyproject.toml
streaming_demo/: main.py
